i added body to my page, there was no body

--- a/HOME.HTML
+++ b/HOME.HTML
@@ -1,5 +1,10 @@
 <HTML>
     <head>
-        
+        <title> VICASON PAGA </title>
+        <BODY>
+            <section>
+                <p>VICASON HELP YOU BORROW MONEY FROM US</p>
+            </section>
+        </BODY>
     </head>
 </HTML>
