change my title name

--- a/HOME.HTML
+++ b/HOME.HTML
@@ -1,6 +1,6 @@
 <HTML>
     <head>
-        <title> VICASON PAGA </title>
+        <title> VICASON WEBgit </title>
         <BODY>
             <section>
                 <p>VICASON HELP YOU BORROW MONEY FROM US</p>
