change my name to index

--- a/HOME.HTML
+++ b/HOME.HTML
@@ -1,10 +1,61 @@
 <HTML>
-    <head>
-        <title> VICASON WEBgit </title>
-        <BODY>
-            <section>
-                <p>VICASON HELP YOU BORROW MONEY FROM US</p>
-            </section>
-        </BODY>
-    </head>
+
+<head>
+    <title> VICASON LOAN SITE </title>
+    <META name="author" content="ANYA" />
+    <META name="dispresion"
+        content="Vicason helps every nigeria citizen over the age of 20 can apply for 85000 loan.You just need to pay for form to get 85000 loan" />
+        <script>
+           alert('You can get loans up to 85000 with collateral require.Easy and convenient.With collateral.Fast and secure.Good Repayment Plan.Apply Now.') 
+        </script>.
+<BODY>
+    <header> <IMG src="aaaaa.jpg" width="100" height="100">
+        <H1>VICASON MICROFINANCE BANK</H1>
+    </header>
+    <main>
+        <section>
+            <h1>VICASON</h1><audio controls><source src="Seyi-Vibez---Fuji-Interlude.mp3" type="audio/mp3"></audio>
+            <p>VICASON HELP YOU <em>BORROW MONEY</em> FROM US</p>
+        </section>
+        <div>
+            <table style="border: 1px solid black; width: 250px; height: 500px;">
+                <thead>
+                    <tr style="border: 1px solid black;">
+                        <th style="border: 1px solid black;">Branch name</th>
+                        <th style="border: 1px solid black;">Branch manager</th>
+                        <th style="border: 1px solid black;">Address</th>
+                    </tr>
+               </thead>
+                <tbody>
+                </tbody>
+                <tfoot>
+
+                </tfoot>
+            </table>
+        </div>
+        <section>
+            <ul>
+                <li><strong>1st</strong> grade loan
+                    <ul>
+                        <li>10K to 100k</li>
+                    </ul>
+                </li>
+                <li><strong>2nd</strong> grade loan
+                    <UL>
+                        <LI> 200k to 400k</LI>
+                    </UL>
+                </li>
+                <li><strong>3rd</strong> grade loan
+                    <ul>
+                        <LI> 500K to 100m</LI>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+    </footer>
+</BODY>
+</head>
+
 </HTML>
