--- a/index.html
+++ b/index.html
@@ -4,32 +4,47 @@
     <title> VICASON LOAN SITE </title>
     <META name="author" content="ANYA" />
     <META name="dispresion"
-        content="Vicason helps every nigeria citizen over the age of 20 can apply for 85000 loan.You just need to pay for form to get 85000 loan" />
+     content="Vicason helps every nigeria citizen over the age of 20 can apply for 85000 loan.You just need to pay for form to get 85000 loan" />
         <script>
-           alert('You can get loans up to 85000 with collateral require.Easy and convenient.With collateral.Fast and secure.Good Repayment Plan.Apply Now.') 
-        </script>.
+        // <alert('You can get loans up to 85000 with collateral require.Easy and convenient.With collateral.Fast and secure.Good Repayment Plan.Apply Now.') 
+        </script>
+        <link href="index.css" rel="stylesheet"/>
+</head>     
 <BODY>
     <header> <IMG src="aaaaa.jpg" width="100" height="100">
         <H1>VICASON MICROFINANCE BANK</H1>
     </header>
-    <main>
+    <main
         <section>
             <h1>VICASON</h1><audio controls><source src="Seyi-Vibez---Fuji-Interlude.mp3" type="audio/mp3"></audio>
             <p>VICASON HELP YOU <em>BORROW MONEY</em> FROM US</p>
         </section>
         <div>
-            <table style="border: 1px solid black; width: 250px; height: 500px;">
+            <table>
                 <thead>
-                    <tr style="border: 1px solid black;">
-                        <th style="border: 1px solid black;">Branch name</th>
-                        <th style="border: 1px solid black;">Branch manager</th>
-                        <th style="border: 1px solid black;">Address</th>
+                    <tr>
+                        <th>Branch name</th>
+                        <th>Branch manager</th>
+                        <th>Address</th>
                     </tr>
                </thead>
                 <tbody>
-                </tbody>
-                <tfoot>
+                <Tr> 
+                    <td>FIRST Branch</td>
+                        <td>CHIKERE</td>
+                        <td>LEKKI</td>
+                    </tr>
 
+                    <tr>
+                      <td> OG Branch</td>
+                        <td> VICENT</td>
+                        <td> AGBARA</td>
+                    </tr>
+                </tbody>     
+                        <tfoot>
+                        <TR>
+                            <th style="font-size: 40px;" colspan="3" > 08162234829</th>
+                        </TR>   
                 </tfoot>
             </table>
         </div>
@@ -56,6 +71,4 @@
     <footer>
     </footer>
 </BODY>
-</head>
-
 </HTML>
