--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <HTML>
-
 <head>
     <title> VICASON LOAN SITE </title>
     <META name="author" content="ANYA" />
@@ -14,7 +13,8 @@
     <header> <IMG src="aaaaa.jpg" width="100" height="100">
         <H1>VICASON MICROFINANCE BANK</H1>
     </header>
-    <main
+    
+    <main>
         <section>
             <h1>VICASON</h1><audio controls><source src="Seyi-Vibez---Fuji-Interlude.mp3" type="audio/mp3"></audio>
             <p>VICASON HELP YOU <em>BORROW MONEY</em> FROM US</p>
@@ -66,7 +66,8 @@
                     </ul>
                 </li>
             </ul>
-        </section>
+            
+        </div>
     </main>
     <footer>
     </footer>
