--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header> <IMG src="aaaaa.jpg" width="100" height="100">
         <H1>VICASON MICROFINANCE BANK</H1>
     </header>
-    
+    <nav>
+        <A href="loan.html">LOANS</A>
+    </nav>
     <main>
         <section>
             <h1>VICASON</h1><audio controls><source src="Seyi-Vibez---Fuji-Interlude.mp3" type="audio/mp3"></audio>
