i added my logo ,no logo

--- a/loan.html
+++ b/loan.html
@@ -23,7 +23,7 @@
                 BORROWER FORM
             </H2>
         </section>
-        <form>
+        <form action="index.html" method="post">
             <div>
                 <label>BORROWERS NAME:</label>
                 <input type="text" />
@@ -63,7 +63,12 @@
             <lable> DATE OF  PAYMENT</lable>
             <input type="date"/>
         </div>
+        <div>
+            <input type="submit"/>
+            <input type="password"/>
+        </div>
         </form>
+  
     </main>
 </body>
 
