--- a/index.html
+++ b/index.html
@@ -1,77 +1,64 @@
 <HTML>
+
 <head>
     <title> VICASON LOAN SITE </title>
     <META name="author" content="ANYA" />
     <META name="dispresion"
-     content="Vicason helps every nigeria citizen over the age of 20 can apply for 85000 loan.You just need to pay for form to get 85000 loan" />
-        <script>
+        content="Vicason helps every nigeria citizen over the age of 20 can apply for 85000 loan.You just need to pay for form to get 85000 loan" />
+    <script>
         // <alert('You can get loans up to 85000 with collateral require.Easy and convenient.With collateral.Fast and secure.Good Repayment Plan.Apply Now.') 
-        </script>
-        <link href="index.css" rel="stylesheet"/>
-</head>     
-<BODY>
-    <header> <IMG src="aaaaa.jpg" width="100" height="100">
-        <H1>VICASON MICROFINANCE BANK</H1>
-    </header>
-    <nav>
-        <A href="loan.html">LOANS</A>
-    </nav>
-    <main>
-        <section>
-            <h1>VICASON</h1><audio controls><source src="Seyi-Vibez---Fuji-Interlude.mp3" type="audio/mp3"></audio>
-            <p>VICASON HELP YOU <em>BORROW MONEY</em> FROM US</p>
-        </section>
-        <div>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Branch name</th>
-                        <th>Branch manager</th>
-                        <th>Address</th>
-                    </tr>
-               </thead>
-                <tbody>
-                <Tr> 
-                    <td>FIRST Branch</td>
-                        <td>CHIKERE</td>
-                        <td>LEKKI</td>
-                    </tr>
+    </script>
+    <link href="index.css" rel="stylesheet" />
+</head>
 
-                    <tr>
-                      <td> OG Branch</td>
-                        <td> VICENT</td>
-                        <td> AGBARA</td>
-                    </tr>
-                </tbody>     
-                        <tfoot>
-                        <TR>
-                            <th style="font-size: 40px;" colspan="3" > 08162234829</th>
-                        </TR>   
-                </tfoot>
-            </table>
-        </div>
-        <section>
-            <ul>
-                <li><strong>1st</strong> grade loan
-                    <ul>
-                        <li>10K to 100k</li>
-                    </ul>
-                </li>
-                <li><strong>2nd</strong> grade loan
-                    <UL>
-                        <LI> 200k to 400k</LI>
-                    </UL>
-                </li>
-                <li><strong>3rd</strong> grade loan
-                    <ul>
-                        <LI> 500K to 100m</LI>
-                    </ul>
-                </li>
-            </ul>
-            
-        </div>
+<BODY>
+    <header>
+        <DIV><img src="images/vicason_logo2.png"/></DIV>
+        <NAV>
+            <a href="">HOME</a>
+            <a href="">HOW IT WORKS</a>
+            <a href=""> ABOUT </a>
+            <a href=""> CONTACT </a>
+            <a href=""> FAQS </a>
+            <a href=""> SIGN UP </a>
+            <a href=""> LOGIN </a>
+        </NAV>
+    </header>
+    <main>
+        <section id="hero-section">
+            <section id="herotext-section">
+                <h1> Vicason Loan </h1>
+                <h2> Get your loan in minutes!</h2>
+                <p> Vicason loan is the easiest, safest and trusted way to get it.</p>
+                <a href="loan.html">
+                    Signup
+                </a>
+            </section>
+            <section id="file-section"> 
+            <section id="available-section" class="file">
+                <h3> Always Available</h3>
+                <p> Apply for vicasonloan loan, anywhere,at an time on any device</p>
+            </section>
+            <section id="data-section" class="file">
+                <h3> DATA SECURITY </h3>
+                <P> All data provided on our website is safe and encrypted using SSL technology.</P>
+            </section>
+            <section id="no-charges" class="file">
+                <h3> No Hidden charges</h3>
+                <p> we tell you fees upfront before you apply.No added costs to taking vicasonloan loan.Now we operta
+                    within plateau with plans to expand to various states nationwide anytime soon.</p>
+            </section>
+        </section>
+        </section>
+
     </main>
     <footer>
+        <ul>
+            <li>I normally display block</li>
+            <li>I also display block usually</li>
+            <li>I am meant to display as block</li>
+        </ul>
     </footer>
 </BODY>
+
 </HTML>
