update my commit,it was not up to date

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <BODY>
     <header>
-        <DIV><img src="images/vicason_logo2.png"/></DIV>
+        <DIV><img src="images/vicason_logo2.png" /></DIV>
         <NAV>
             <a href="">HOME</a>
-            <a href="">HOW IT WORKS</a>
-            <a href=""> ABOUT </a>
+            <a href="#sidekick">HOW IT WORKS</a>
+            <a href="#ABOUTUS"> ABOUT </a>
             <a href=""> CONTACT </a>
-            <a href=""> FAQS </a>
+            <a href="#FAQS"> FAQS </a>
             <a href=""> SIGN UP </a>
             <a href=""> LOGIN </a>
         </NAV>
@@ -30,29 +30,189 @@
                 <h1> Vicason Loan </h1>
                 <h2> Get your loan in minutes!</h2>
                 <p> Vicason loan is the easiest, safest and trusted way to get it.</p>
-                <a href="loan.html">
+                <a id="signup" href="loan.html">
                     Signup
                 </a>
             </section>
-            <section id="file-section"> 
-            <section id="available-section" class="file">
-                <h3> Always Available</h3>
-                <p> Apply for vicasonloan loan, anywhere,at an time on any device</p>
-            </section>
-            <section id="data-section" class="file">
-                <h3> DATA SECURITY </h3>
-                <P> All data provided on our website is safe and encrypted using SSL technology.</P>
-            </section>
-            <section id="no-charges" class="file">
-                <h3> No Hidden charges</h3>
-                <p> we tell you fees upfront before you apply.No added costs to taking vicasonloan loan.Now we operta
-                    within plateau with plans to expand to various states nationwide anytime soon.</p>
+            <section id="file-section">
+                <section id="available-section" class="file">
+                    <h3> Always Available</h3>
+                    <p> Apply for vicasonloan loan, anywhere,at an time on any device</p>
+                </section>
+                <section id="data-section" class="file">
+                    <h3> DATA SECURITY </h3>
+                    <P> All data provided on our website is safe and encrypted using SSL technology.</P>
+                </section>
+                <section id="no-charges" class="file">
+                    <h3> No Hidden charges</h3>
+                    <p> we tell you fees upfront before you apply.No added costs to taking vicasonloan loan.Now we
+                        operta
+                        within plateau with plans to expand to various states nationwide anytime soon.</p>
+                </section>
             </section>
         </section>
+        <section id="sidekick">
+            <section id="HIW">
+                <h1> HOW IT WORKS </h1>
+                <p>Vicasonloan is an entirely online lending platform designed from the ground up to serve your needs.
+                    When you need money now, VicasonLoan is the easiest, safest and most trusted way to get it. SL is a
+                    consumer finance initiative powered by Infocrest Cooperative. We are committed to providing consumer
+                    credit to our target market in the most efficient and convenient manner while ensuring best
+                    practices. We provide Cash Loans to individual, groups and offer Point of sale finance for consumer
+                    goods and appliances in partnership with retailers across Plateau.</p>
+            </section>
+            <section id="Howitworks">
+                <h1>How it works</h1>
+                <p>Introduce Yourself
+                    We’d like to get to know you better. Fill out our brief application form with your information and
+                    we’ll review immediately. To register and apply for a loan, all you need to do is:
+                </p>
+            </section>
+            <section id="MoneyinYourAccount">
+                <h1>Money in Your Account</h1>
+                <p>
+                    Once approved, funds are typically received within 1 - 3 business days. If your application is
+                    unsuccessful, we will inform you of the reason(s) as you may still be eligible for a loan.
+                </p>
+            </section>
+            <section id="RepayYourLoan">
+                <h1>Repay Your Loan</h1>
+                <p>
+                    Making on-time repayments can grant you access to higher credit limits for your next loan. If you
+                    have any questions regarding our Mobile App, have a look at our Frequently Asked Questions (FAQs).
+                </p>
+            </section>
+            <div>
+            </div>
+        </section>
+        <DIV id="ABOUTUS">
+            <section id="AU">
+                <h1>ABOUT US </h1>
+            </section>
+            <section id="vl">
+                <p>
+                    VicsonLoan is a simple, entirely online lending platform that provides short-term loans to help
+                    cover
+                    unexpected expenses or urgent cash needs. You can apply for a VicasonLoan loan 24 hours a day, 7
+                    days a
+                    week with our quick application process that lets you know your status within minutes.We’re here to
+                    help
+                    you when in need, but you should not take out a SmartLoan loan for long-term borrowing or if you are
+                    in
+                    serious financial difficulty
+                </p>
+                <DIV id="AN">
+                    <A>Apply Now</A>
+                </DIV>
+            </section>
+            <DIV id="logo"><img src="images/vicason about us.jpg" />
+                <img id="vlogo" src="images/vicason_logo2.png" />
+            </DIV>
+        </DIV>
+
+
+        <section id="FAQS">
+            <section id="FAQ">
+                <h1>FREQUENTLY ASKED QUESTIONS</h1>
+            </section>
+            <div>
+                <h3> How does it work?</h3>
+                <p>
+                    Complete our 100% online application in minutes and submit. We’ll review your information and
+                    communicate a decision to you within minutes. If approved, you will receive funds directly into your
+                    preferred bank account within 72 hours of loan approval.
+                </p>
+            </div>
+            <section>
+                <h3>How much can I borrow from VicasonLoan? For how long?</h3>
+                <p> For your first loan, you can borrow up to ₦10,000 for a period of up to 30 days. You decide how much
+                    you want and how long you want it for. Once you have paid your first loan on time, the possibility
+                    of you receiving a higher credit limit increases. The more times you take a SL loan and repay
+                    successfully, the more we can lend to you.</p>
+            </section>
+            <div>
+                <h3> How do I apply?</h3>
+                <p>
+                    Sign in to identify yourself and this will take you to our brief registration & application forms.
+                    Complete an application with valid information, then use our calculator to determine how much you
+                    would like to borrow and view your expected repayment(s). Submit your application and we will notify
+                    you instantly of the loan decision.
+                </p>
+            </div>
+            <section>
+                <h3> How do I repay my loan?</h3>
+                <p> We’ve made it as easy as possible for you to repay your VL loan. On your due date, your payment will
+                    conveniently be deducted from the account linked to the debit/ATM card provided during your loan
+                    application.</p>
+            </section>
+            <div>
+                <h3> I have never previously used my debit/ATM card for an online transaction. How can I setup on
+                    VicasonLoan?</h3>
+                <p>
+                    Depending on your card type, you may need to enable your debit card for online transactions prior to
+                    completing setup on VicasonLoan.
+                </p>
+            </div>
+            <section>
+                <h3>I was approved for a loan, why have I not yet received my funds?</h3>
+                <p>For your convenience, we’ll deduct your repayment automatically on your due date. Your debit/ATM card
+                    needs to be setup in order for your funds to be disbursed to your account. Please click 'Setup Card'
+                    in the app to add a card to be used for repayment.
+                </p>
+                <span> Please note: you may need to have at least NGN100 in the account linked to the card for setup to
+                    be successful.</span>
+            </section>
+            <div>
+                <h3>My loan status is ‘Disbursed’, but I am yet to receive funds in my account.</h3>
+                <p>Funds are typically received within 72 hours of loan approval. Please let us know if you have not
+                    received the transfer after that period. However, we also advise that you check your account balance
+                    directly as credit alerts are not always received with transfers.</p>
+            </div>
+            <section>
+                <h3> Why is my Bank Verification Number (BVN) required?</h3>
+                <p>
+                    We request your BVN as this is used to verify that the individual applying for a SmartLoan loan is
+                    the same as the owner of the provided bank account. This is to ensure that your details cannot be
+                    used to apply for a loan without your authorization in the event a 3rd party has access to your
+                    account details. Please note: Your BVN does not provide access to your account. If in doubt, we
+                    encourage you to confirm this from your bank before you proceed.
+                </p>
+            </section>
+            <div>
+                <h3> I don’t know my BVN. What do I do?</h3>
+                <p> Just dial *565*0#. Please note: This will only work if you are making the request from the same
+                    phone number currently linked to your bank account</p>
+            </div>
+            <section>
+                <h3> What documents do I need to submit?</h3>
+                <p>
+                    You do not need to submit any documents to get a SmartLoan loan. We’ll just ask you for some basic
+                    information so we can get to know you better. All you need is a compatible personal mobile device to
+                    use the app and a functional BVN-linked bank account to receive funds in, and a valid debit/ATM card
+                    for loan repayment.
+                </p>
+            </section>
+            <div>
+                <h3> Can I make an early repayment? If I make an early repayment, will I pay less?</h3>
+                <p>Early repayments are accepted and you can apply for a new loan immediately your previous loan is paid
+                    off. However, please note that early repayment does not imply that the terms of your loan obligation
+                    will change. Your repayment terms are fixed at the point of loan application and the total amount to
+                    be paid is not changed by an early repayment.
+                </p>
+            </div>
         </section>
 
     </main>
     <footer>
+        <section>
+            <div>
+                <h1> STAY CONNECTED </h1>
+                <p> Stay in Touch with SmartLoan to Get Financially Smart</p>
+            </div>
+            
+        </section>
+
+
     </footer>
 </BODY>
 
