--- a/index.html
+++ b/index.html
@@ -204,13 +204,39 @@
 
     </main>
     <footer>
-        <section>
-            <div>
+        <section id="footsection">
+            <div id="stay">
                 <h1> STAY CONNECTED </h1>
                 <p> Stay in Touch with SmartLoan to Get Financially Smart</p>
             </div>
-            
-        </section>
+            <div id="CC">
+                <img id="vlogo" src="images/vicason_logo2.png" />
+                <h3>CUSTOMER CARE</h3>
+                <h2>07026840597</h2>
+            </div>
+            <div id="location">
+                <img id="vlogo" src="images/vicason_logo2.png" />
+                <h3>SUIT 14 TANAN BHIYAR HOUSE BY ATIKU JUNCTION 09068663241</h3>
+                <h2> OGUN STATE</h2>
+            </div>
+            <div id="tiwtter">
+                <img id="vlogo" src="images/vicason_logo2.png" />
+                <H3> TIWTTER</H3>
+                <H2>VICASON_LOAN</H2>
+            </div>
+            <DIV id="facebook">
+                <img id="vlogo" src="images/vicason_logo2.png" />
+                <H3> FACEBOOK </H3>
+                <H2> VICASON LOAN </H2>
+            </DIV>
+            <div id="line"></div>
+            <div id="anya">
+                <h1> Copyright © Vicason Loan 2024, All Right Reserved</h1>
+                <a> Terms and Conditions</a>|
+                <a> Privacy Policy</a>
+                <p>Designed/Developed by Smartloan in collaboration with ANYA TECHNOLOGIES</p>
+            </div>
+             </section>
 
 
     </footer>
