update the icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 
 <head>
+    <script src="https://kit.fontawesome.com/0e1dc7256c.js" crossorigin="anonymous"></script>
     <title> VICASON LOAN SITE </title>
     <META name="author" content="ANYA" />
     <META name="dispresion"
@@ -36,14 +37,17 @@
             </section>
             <section id="file-section">
                 <section id="available-section" class="file">
+                    <i class="fa-sharp fa-solid fa-comments color"></i>
                     <h3> Always Available</h3>
                     <p> Apply for vicasonloan loan, anywhere,at an time on any device</p>
                 </section>
                 <section id="data-section" class="file">
+                    <i class="fa-sharp fa-solid fa-shield-halved color"></i>
                     <h3> DATA SECURITY </h3>
                     <P> All data provided on our website is safe and encrypted using SSL technology.</P>
                 </section>
                 <section id="no-charges" class="file">
+                    <i class="fa-sharp fa-solid fa-eye-slash color"></i>
                     <h3> No Hidden charges</h3>
                     <p> we tell you fees upfront before you apply.No added costs to taking vicasonloan loan.Now we
                         operta
@@ -210,22 +214,22 @@
                 <p> Stay in Touch with SmartLoan to Get Financially Smart</p>
             </div>
             <div id="CC">
-                <img id="vlogo" src="images/vicason_logo2.png" />
+                <i class="fa-solid fa-phone green-color"></i>
                 <h3>CUSTOMER CARE</h3>
                 <h2>07026840597</h2>
             </div>
             <div id="location">
-                <img id="vlogo" src="images/vicason_logo2.png" />
+                <i class="fa-sharp fa-solid fa-building-columns green-color"></i>
                 <h3>SUIT 14 TANAN BHIYAR HOUSE BY ATIKU JUNCTION 09068663241</h3>
                 <h2> OGUN STATE</h2>
             </div>
             <div id="tiwtter">
-                <img id="vlogo" src="images/vicason_logo2.png" />
+                <i class="fa-solid fa-x green-color"></i>
                 <H3> TIWTTER</H3>
                 <H2>VICASON_LOAN</H2>
             </div>
             <DIV id="facebook">
-                <img id="vlogo" src="images/vicason_logo2.png" />
+                <i class="fa-brands fa-facebook-f green-color"></i>
                 <H3> FACEBOOK </H3>
                 <H2> VICASON LOAN </H2>
             </DIV>
